Source/Alternet.UI.Pal/Api/Control.Api.h

using namespace Alternet::UI;
ALTERNET_UI_API c_bool Control_GetIsHandleCreated_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetIsHandleCreated();
    });
}
ALTERNET_UI_API c_bool Control_GetIsWxWidgetCreated_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetIsWxWidgetCreated();
    });
}
ALTERNET_UI_API void* Control_GetHandle_(Control* obj)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetHandle();
    });
}
ALTERNET_UI_API void* Control_GetWxWidget_(Control* obj)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetWxWidget();
    });
}
ALTERNET_UI_API c_bool Control_GetIsScrollable_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetIsScrollable();
    });
}
ALTERNET_UI_API void Control_SetIsScrollable_(Control* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetIsScrollable(value);
    });
}
ALTERNET_UI_API c_bool Control_GetIsMouseCaptured_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetIsMouseCaptured();
    });
}
ALTERNET_UI_API c_bool Control_GetTabStop_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetTabStop();
    });
}
ALTERNET_UI_API void Control_SetTabStop_(Control* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetTabStop(value);
    });
}
ALTERNET_UI_API c_bool Control_GetIsFocused_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetIsFocused();
    });
}
ALTERNET_UI_API c_bool Control_GetIsFocusable_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetIsFocusable();
    });
}
ALTERNET_UI_API c_bool Control_GetCanAcceptFocus_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetCanAcceptFocus();
    });
}
ALTERNET_UI_API Control* Control_GetParentRefCounted_(Control* obj)
{
    return MarshalExceptions<Control*>([&](){
        return obj->GetParentRefCounted();
    });
}
ALTERNET_UI_API char16_t* Control_GetToolTip_(Control* obj)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->GetToolTip());
    });
}
ALTERNET_UI_API void Control_SetToolTip_(Control* obj, const char16_t* value)
{
    MarshalExceptions<void>([&](){
        obj->SetToolTip(ToOptional(value));
    });
}
ALTERNET_UI_API c_bool Control_GetAllowDrop_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetAllowDrop();
    });
}
ALTERNET_UI_API void Control_SetAllowDrop_(Control* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetAllowDrop(value);
    });
}
ALTERNET_UI_API SizeD_C Control_GetSize_(Control* obj)
{
    return MarshalExceptions<SizeD_C>([&](){
        return obj->GetSize();
    });
}
ALTERNET_UI_API void Control_SetSize_(Control* obj, SizeD value)
{
    MarshalExceptions<void>([&](){
        obj->SetSize(value);
    });
}
ALTERNET_UI_API PointD_C Control_GetLocation_(Control* obj)
{
    return MarshalExceptions<PointD_C>([&](){
        return obj->GetLocation();
    });
}
ALTERNET_UI_API void Control_SetLocation_(Control* obj, PointD value)
{
    MarshalExceptions<void>([&](){
        obj->SetLocation(value);
    });
}
ALTERNET_UI_API RectD_C Control_GetBounds_(Control* obj)
{
    return MarshalExceptions<RectD_C>([&](){
        return obj->GetBounds();
    });
}
ALTERNET_UI_API void Control_SetBounds_(Control* obj, RectD value)
{
    MarshalExceptions<void>([&](){
        obj->SetBounds(value);
    });
}
ALTERNET_UI_API RectI_C Control_GetBoundsI_(Control* obj)
{
    return MarshalExceptions<RectI_C>([&](){
        return obj->GetBoundsI();
    });
}
ALTERNET_UI_API void Control_SetBoundsI_(Control* obj, RectI value)
{
    MarshalExceptions<void>([&](){
        obj->SetBoundsI(value);
    });
}
ALTERNET_UI_API RectD_C Control_GetEventBounds_(Control* obj)
{
    return MarshalExceptions<RectD_C>([&](){
        return obj->GetEventBounds();
    });
}
ALTERNET_UI_API SizeD_C Control_GetClientSize_(Control* obj)
{
    return MarshalExceptions<SizeD_C>([&](){
        return obj->GetClientSize();
    });
}
ALTERNET_UI_API void Control_SetClientSize_(Control* obj, SizeD value)
{
    MarshalExceptions<void>([&](){
        obj->SetClientSize(value);
    });
}
ALTERNET_UI_API SizeD_C Control_GetAutoPaddingLeftTop_(Control* obj)
{
    return MarshalExceptions<SizeD_C>([&](){
        return obj->GetAutoPaddingLeftTop();
    });
}
ALTERNET_UI_API SizeD_C Control_GetAutoPaddingRightBottom_(Control* obj)
{
    return MarshalExceptions<SizeD_C>([&](){
        return obj->GetAutoPaddingRightBottom();
    });
}
ALTERNET_UI_API c_bool Control_GetVisible_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetVisible();
    });
}
ALTERNET_UI_API void Control_SetVisible_(Control* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetVisible(value);
    });
}
ALTERNET_UI_API c_bool Control_GetEnabled_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetEnabled();
    });
}
ALTERNET_UI_API void Control_SetEnabled_(Control* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetEnabled(value);
    });
}
ALTERNET_UI_API c_bool Control_GetUserPaint_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetUserPaint();
    });
}
ALTERNET_UI_API void Control_SetUserPaint_(Control* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetUserPaint(value);
    });
}
ALTERNET_UI_API c_bool Control_GetIsMouseOver_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetIsMouseOver();
    });
}
ALTERNET_UI_API c_bool Control_GetHasWindowCreated_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetHasWindowCreated();
    });
}
ALTERNET_UI_API Color_C Control_GetBackgroundColor_(Control* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetBackgroundColor();
    });
}
ALTERNET_UI_API void Control_SetBackgroundColor_(Control* obj, Color value)
{
    MarshalExceptions<void>([&](){
        obj->SetBackgroundColor(value);
    });
}
ALTERNET_UI_API Color_C Control_GetForegroundColor_(Control* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetForegroundColor();
    });
}
ALTERNET_UI_API void Control_SetForegroundColor_(Control* obj, Color value)
{
    MarshalExceptions<void>([&](){
        obj->SetForegroundColor(value);
    });
}
ALTERNET_UI_API Font* Control_GetFont_(Control* obj)
{
    return MarshalExceptions<Font*>([&](){
        return obj->GetFont();
    });
}
ALTERNET_UI_API void Control_SetFont_(Control* obj, Font* value)
{
    MarshalExceptions<void>([&](){
        obj->SetFont(value);
    });
}
ALTERNET_UI_API void* Control_GetCGContextRef_(Control* obj)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetCGContextRef();
    });
}
ALTERNET_UI_API void Control_SetAllowDefaultContextMenu_(Control* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetAllowDefaultContextMenu(value);
    });
}
ALTERNET_UI_API void Control_SetScrollBar_(Control* obj, ScrollBarOrientation orientation, HiddenOrVisible visible, int value, int largeChange, int maximum)
{
    MarshalExceptions<void>([&](){
        obj->SetScrollBar(orientation, visible, value, largeChange, maximum);
    });
}
ALTERNET_UI_API c_bool Control_IsScrollBarVisible_(Control* obj, ScrollBarOrientation orientation)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->IsScrollBarVisible(orientation);
    });
}
ALTERNET_UI_API int Control_GetScrollBarValue_(Control* obj, ScrollBarOrientation orientation)
{
    return MarshalExceptions<int>([&](){
        return obj->GetScrollBarValue(orientation);
    });
}
ALTERNET_UI_API int Control_GetScrollBarLargeChange_(Control* obj, ScrollBarOrientation orientation)
{
    return MarshalExceptions<int>([&](){
        return obj->GetScrollBarLargeChange(orientation);
    });
}
ALTERNET_UI_API int Control_GetScrollBarMaximum_(Control* obj, ScrollBarOrientation orientation)
{
    return MarshalExceptions<int>([&](){
        return obj->GetScrollBarMaximum(orientation);
    });
}
ALTERNET_UI_API void* Control_CreateControl_()
{
    return MarshalExceptions<void*>([&](){
        return Control::CreateControl();
    });
}
ALTERNET_UI_API c_bool Control_EnableTouchEvents_(Control* obj, int flag)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->EnableTouchEvents(flag);
    });
}
ALTERNET_UI_API c_bool Control_BeginRepositioningChildren_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->BeginRepositioningChildren();
    });
}
ALTERNET_UI_API void Control_EndRepositioningChildren_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->EndRepositioningChildren();
    });
}
ALTERNET_UI_API RectI_C Control_GetUpdateClientRect_(Control* obj)
{
    return MarshalExceptions<RectI_C>([&](){
        return obj->GetUpdateClientRect();
    });
}
ALTERNET_UI_API DrawingContext* Control_OpenClientDrawingContextForWindow_(void* window)
{
    return MarshalExceptions<DrawingContext*>([&](){
        return Control::OpenClientDrawingContextForWindow(window);
    });
}
ALTERNET_UI_API DrawingContext* Control_OpenPaintDrawingContextForWindow_(void* window)
{
    return MarshalExceptions<DrawingContext*>([&](){
        return Control::OpenPaintDrawingContextForWindow(window);
    });
}
ALTERNET_UI_API DrawingContext* Control_OpenDrawingContextForDC_(void* dc, c_bool deleteDc)
{
    return MarshalExceptions<DrawingContext*>([&](){
        return Control::OpenDrawingContextForDC(dc, deleteDc);
    });
}
ALTERNET_UI_API void Control_CenterOnParent_(Control* obj, int orientation)
{
    MarshalExceptions<void>([&](){
        obj->CenterOnParent(orientation);
    });
}
ALTERNET_UI_API void Control_RefreshRect_(Control* obj, RectD rect, c_bool eraseBackground)
{
    MarshalExceptions<void>([&](){
        obj->RefreshRect(rect, eraseBackground);
    });
}
ALTERNET_UI_API void Control_Raise_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->Raise();
    });
}